--- a/src/app/modules/components/game/game.component.css
+++ b/src/app/modules/components/game/game.component.css
@@ -104,6 +104,10 @@ input{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border: 1px solid black;
+  background-color: grey;
+  padding: 50px;
+  box-shadow: 1px 5px 5px black;
 }
 
 .winner{
@@ -117,6 +121,23 @@ input{
   top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.overlay-close{
+  font-size: 50px;
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  background: white;
+  color: black;
+  border-radius: 50%;
+  padding: 20px;
+  box-shadow: 1px 5px 5px black;
+}
+
+.overlay-close:hover{
+  opacity: .8;
+  transform: scale(1.1);
 }
 
 
