--- a/src/app/modules/components/game/game.component.css
+++ b/src/app/modules/components/game/game.component.css
@@ -9,7 +9,7 @@
 }
 
 .game-row:last-of-type{
-  margin: 0px;
+  margin: 0;
 }
 
 .game-cell{
@@ -50,10 +50,13 @@
   display: flex;
   justify-content: space-between;
   margin: 5px;
+  height: 60px;
 }
 button{
   padding: 10px;
   background-color: deepskyblue;
+  width: 100px;
+  height: 50px;
   border-radius: 10px;
   color: white;
   box-shadow: 1px 5px 5px black;
@@ -74,6 +77,14 @@ input{
   width: 100px;
   height: 30px;
   text-align: center;
+  position: relative;
+
+}
+input.ng-invalid.ng-touched{
+  border: 2px solid red;
+}
+input.ng-valid.ng-touched{
+  border: 2px solid green;
 }
 
 .score{
@@ -82,9 +93,6 @@ input{
   font-size: 20px;
   padding: 5px;
 }
-.score, p{
-
-}
 
 .overlay{
   position: absolute;
@@ -92,22 +100,27 @@ input{
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(5, 64, 147, 0.55);
+  background-color: rgba(5, 64, 147, 0.3);
+  width: 100%;
+  max-width: 100vw;
+  height: 100%;
 }
 
 .overlay-text{
+  position: relative;
+  max-width: 520px;
   display: block;
   text-align: center;
   color: white;
   font-size: 100px;
-  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border: 1px solid black;
-  background-color: grey;
+  background-color: rgba(128, 128, 128, 0.38);
   padding: 50px;
   box-shadow: 1px 5px 5px black;
+  user-select: none
 }
 
 .winner{
@@ -116,28 +129,41 @@ input{
 }
 
 .overlay-btn{
-  font-size: 50px;
+  font-size: 20px;
   position: absolute;
-  top: 75%;
+  width: 150px;
+  height: 75px;
+  bottom: 50px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .overlay-close{
-  font-size: 50px;
+  font-size: 20px;
+  width: 50px;
+  height: 50px;
   position: absolute;
-  top: 50px;
-  right: 50px;
+  top: -20px;
+  right: -20px;
   background: white;
   color: black;
   border-radius: 50%;
-  padding: 20px;
   box-shadow: 1px 5px 5px black;
 }
 
 .overlay-close:hover{
   opacity: .8;
   transform: scale(1.1);
+}
+
+small{
+  color: red;
+  position: absolute;
+  top: 40px;
+  left: 41%;
+}
+.validation{
+  height: 10px;
 }
 
 
